--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -25,7 +25,7 @@
     <div class="form-group">
       <label>Password</label>
       <input type="password"
-             name="password1"
+             name="password"
              placeholder="password"
              formControlName="password">
       <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
@@ -36,7 +36,7 @@
     <div class="form-group">
       <label>Confirm Password</label>
       <input type="password"
-             name="password2"
+             name="password"
              placeholder="password"
              formControlName="confirmPassword">
       <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
