--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -2,18 +2,16 @@
   <form [formGroup]="loginForm"
         (ngSubmit)="checkAuth(loginForm.value)">
     <input type="email"
-           name = "email"
-           placeholder = "example@gmail.com"
-           formControlName = "email">
+           name="email"
+           placeholder="example@gmail.com"
+           formControlName="email">
     <br/>
     <input type="password"
            name="password"
            placeholder="password"
            formControlName="password">
     <br/>
-    <input type="submit"
-           [disabled]="!loginForm.valid"
-           value="Log In">
+    <button [disabled]="!loginForm.valid">Log in</button>
   </form>
 </div>
 <a routerLink="/registration">or <span>Sign Up</span></a>
