--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,13 +1,13 @@
 <div id="map"></div>
 <div class="btns">
-  <button (click)="send()">save</button>
-  <button (click)="get()">show</button>
+  <button [disabled]="submitted" (click)="send()">save</button>
+  <button [disabled]="!submitted" (click)="get()">show</button>
 </div>
 <div class="list">
   <h3>Places list:</h3>
   <li><a (click)="getList({name: 'school'})">School</a></li>
   <li><a (click)="getList({name: 'gas'})">Gas Station</a></li>
   <li><a (click)="getList({name: 'pharmacies'})">Pharmacies</a></li>
-  <li><a (click)="getList({name: 'restoran'})">Restaurant</a></li>
+  <li><a (click)="getList({name: 'restaurant'})">Restaurant</a></li>
 </div>
 
